Update homepage design, navbar logic, and logo changes

--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
   <title>Projects</title>
   <link rel="stylesheet" href="css/project.css" />
@@ -14,19 +15,31 @@
 <!-- Navbar -->
 <header class="navbar">
   <div class="navbar-container">
+    <!-- Logo Kiri -->
     <div class="navbar-left">
       <img src="images/logo.png" alt="Logo" class="logo">
     </div>
+
+    <!-- Menu Tengah -->
     <div class="navbar-center">
       <a href="index.html">Company</a>
-      <a href="project.html">Projects</a>
+      <div class="dropdown">
+        <a href="project.html" class="dropdown-toggle">Projects ▾</a>
+        <div class="dropdown-menu">
+          <a href="project.html#tarumanagara-detail">Tarumanagara</a>
+          <a href="project.html#v-residence-detail">V Residence</a>
+          <a href="project.html#senopati-detail">Senopati</a>
+          <a href="soldout.html">Villa nusantara</a>
+        </div>
+      </div>
     </div>
+
+    <!-- Contact Kanan -->
     <div class="navbar-right">
       <a href="https://api.whatsapp.com/send?phone=6282116000100" class="contact-btn">Contact Us</a>
     </div>
   </div>
 </header>
-
 <main>
   <!-- Project Section -->
   <!-- Section Cards -->
